--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -5,3 +5,7 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
+body {
+  @apply h-full w-full bg-gray-100;
+}
